--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
-<p>Test File</p>
-<p>My Extra Code</p>
-
-<!-- sample extra line-->
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>svrec</title>
+    </head>
+    <body>
+        <div class="container-fluid" kkk>
+            svr engeneering college
+          </div>
+    
+    .kkk{
+        height:40px;
+        background color: red;
+    }    </body>
+</html>
