--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>svrec</title>
     </head>
     <body>
+        <h1>svrec</h1>
         <div class="container-fluid" kkk>
             svr engeneering college
           </div>
