--- a/index.html
+++ b/index.html
@@ -1,16 +1,5 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>svrec</title>
-    </head>
-    <body>
-        <h1>svrec</h1>
-        <div class="container-fluid" kkk>
-            svr engeneering college
-          </div>
-    
-    .kkk{
-        height:40px;
-        background color: red;
-    }    </body>
-</html>
+<p>Test File</p>
+<p>My Extra Code</p> 
+<p>My Extra Code</p>
+
+<!-- sample extra line--> 
