--- a/index.html
+++ b/index.html
@@ -1,5 +1,24 @@
-<p>Test File</p>
-<p>My Extra Code</p> 
-<p>My Extra Code</p>
+<!DOCTYPE html>
+<html>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="/svreccss/3/svrec.css">
+<body>
+        <div class="container">
 
-<!-- sample extra line--> 
+<!-- Navigation -->
+<nav class="w3-bar w3-black">
+  <a href="#home" class="w3-button w3-bar-item">Home</a>
+  <a href="#About" class="w3-button w3-bar-item">About</a>
+  <a href="#Campus" class="w3-button w3-bar-item">Campus</a>
+  <a href="#Courses" class="w3-button w3-bar-item">Courses</a>
+  <a href="#Events" class="w3-button w3-bar-item">Events</a>
+  <a href="#Contact" class="w3-button w3-bar-item">Contact</a>
+</nav>
+<!-- Slide Show -->
+<section>
+        <img class="mySlides" src="kkr.jpg" style="width:100%">
+        </section>
+        </div>
+</body>
+</html>
