--- a/index.html
+++ b/index.html
@@ -3,21 +3,22 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="/svreccss/3/svrec.css">
-<body>
-        <div class="container">
+<body style="background-color:rgb(207, 27, 102);">
+        <b>  <div class="container">
 
 <!-- Navigation -->
 <nav class="w3-bar w3-black">
-  <a href="#home" class="w3-button w3-bar-item">Home</a>
-  <a href="#About" class="w3-button w3-bar-item">About</a>
-  <a href="#Campus" class="w3-button w3-bar-item">Campus</a>
-  <a href="#Courses" class="w3-button w3-bar-item">Courses</a>
-  <a href="#Events" class="w3-button w3-bar-item">Events</a>
-  <a href="#Contact" class="w3-button w3-bar-item">Contact</a>
+  <a style="background-color:rgb(245, 248, 245);"href="#home" class="svrec-button svrec-bar-item">Home</a>
+  <a style="background-color:rgb(245, 248, 245);"href="#About" class="svrec-button svrec-bar-item">About</a>
+  <a style="background-color:rgb(245, 248, 245);"href="#Campus" class="svrec-button svrec-bar-item">Campus</a>
+  <a style="background-color:rgb(245, 248, 245);"href="#Courses" class="svrec-button svrec-bar-item">Courses</a>
+  <a style="background-color:rgb(245, 248, 245);"href="#Events" class="svrec-button svrec-bar-item">Events</a>
+  <a style="background-color:rgb(245, 248, 245);"href="#Contact" class="svrec-button svrec-bar-item">Contact</a>
 </nav>
+</b>
 <!-- Slide Show -->
 <section>
-        <img class="mySlides" src="kkr.jpg" style="width:100%">
+        <img class="mySlides" src="C:\Users\Darling\Desktop/collegepic1.jpg" style="width:100%">
         </section>
         </div>
 </body>
