--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="/svreccss/3/svrec.css">
 <body style="background-color:rgb(207, 27, 102);">
         <b>  <div class="container">
+                <img src="C:\Users\Darling\Desktop/collegelogo.jpg" alt="college logo" width="100" height=400">
 
 <!-- Navigation -->
 <nav class="w3-bar w3-black">
