--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <link rel="stylesheet" href="/svreccss/3/svrec.css">
 <body style="background-color:rgb(207, 27, 102);">
         <b>  <div class="container">
-                <img src="C:\Users\Darling\Desktop/collegelogo.jpg" alt="college logo" width="100" height=400">
 
 <!-- Navigation -->
-<nav class="w3-bar w3-black">
+<nav class="svrec-bar svrec-black">
+  <img src="C:\Users\Darling\Desktop/logo3.jpg" alt="college logo" width="100" height=150">
   <a style="background-color:rgb(245, 248, 245);"href="#home" class="svrec-button svrec-bar-item">Home</a>
   <a style="background-color:rgb(245, 248, 245);"href="#About" class="svrec-button svrec-bar-item">About</a>
   <a style="background-color:rgb(245, 248, 245);"href="#Campus" class="svrec-button svrec-bar-item">Campus</a>
