--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="/svreccss/3/svrec.css">
-<body style="background-color:rgb(207, 27, 102);">
-        <b>  <div class="container">
-
+<body>
+                <img src="C:\Users\Darling\Desktop/logo3.jpg" alt="college logo" width="100" height=150">
+                <div class="container">
 <!-- Navigation -->
-<nav class="svrec-bar svrec-black">
-  <img src="C:\Users\Darling\Desktop/logo3.jpg" alt="college logo" width="100" height=150">
+<nav class="svrec-bar svrec-black" align=center>
   <a style="background-color:rgb(245, 248, 245);"href="#home" class="svrec-button svrec-bar-item">Home</a>
   <a style="background-color:rgb(245, 248, 245);"href="#About" class="svrec-button svrec-bar-item">About</a>
   <a style="background-color:rgb(245, 248, 245);"href="#Campus" class="svrec-button svrec-bar-item">Campus</a>
@@ -16,11 +15,10 @@
   <a style="background-color:rgb(245, 248, 245);"href="#Events" class="svrec-button svrec-bar-item">Events</a>
   <a style="background-color:rgb(245, 248, 245);"href="#Contact" class="svrec-button svrec-bar-item">Contact</a>
 </nav>
-</b>
+</div>
 <!-- Slide Show -->
 <section>
         <img class="mySlides" src="C:\Users\Darling\Desktop/collegepic1.jpg" style="width:100%">
         </section>
-        </div>
 </body>
 </html>
